[project]
name = "esrm_travel"
authors = [
    { name = "3J Technologies", email = "info@example.com" }
]
description = "Custom ERPNext ticketing app for ESRM travel operations"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<18.0.0"
erpnext = ">=15.0.0,<18.0.0"
